--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "browserify": "^15.0.0",
+    "create-react-class": "^15.6.2",
     "flux": "^3.1.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
