--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-open": "^2.1.0",
     "jquery": "^2.1.4",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^2.0.0"
