added react-router-don node_module

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^2.0.0"
   }
